# cogmem

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PROVENANCE.md  README.md  SECURITY.md  THREAT-MODEL.md  UNIFIED-PROVENANCE.md  cogmem  glama.json  install.sh  pyproject.toml  requirements.txt  schema.json  server.json
.github/: CODEOWNERS  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: changelog.yml  ci.yml  codeql.yml  publish.yml
docs/proposals/: ai-agent-identity-for-content-provenance.md  cawg-ai-agent-verified-identity.md  text-fingerprint-soft-binding.md
engine/: __init__.py  acquire.py  artifacts.py  cli.py  common.py  config.json  config.py  consolidate.py  daemon.py  eval.py  feedback.py  guard.py  index.py  indexstore.py  mcp_server.py  metrics.py  migrate.py  narrative.py  note.py  projectstate.py  provenance.py  recall.py  review.py  selfmodel.py  softbinding.py  test_cogmem.py  test_mcp.py  test_provenance.py  test_softbinding.py  tune.py  usermodel.py  wire_hooks.py
engine/hooks/: cogmem-activate.sh  cogmem-capture-pipeline.sh  cogmem-capture.sh  cogmem-context.sh  cogmem-guard.sh  cogmem-recall.sh
examples/c2pa-agent-credential/: README.md  agent-content-didweb.c2pa  agent-content.c2pa  agent-content.txt  verify-cognition.py  verify.sh  wp-root.pem
hooks/: cogmem-activate.sh  cogmem-capture-pipeline.sh  cogmem-capture.sh  cogmem-context.sh  cogmem-guard.sh  cogmem-recall.sh
tests/vectors/: cawg-ica-credential.json  cose-signed-statement.json  generate_cawg_ica.py
